typescript/checker/tests/conformance/es6/destructuring/iterableArrayPattern5.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            255,
        ),
        hi: BytePos(
            256,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/destructuring/iterableArrayPattern5.ts:17:5
   |
17 | var a: Bar, b: string;
   |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            263,
        ),
        hi: BytePos(
            264,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/destructuring/iterableArrayPattern5.ts:17:13
   |
17 | var a: Bar, b: string;
   |             ^

error: NoNewSignature {
    span: Span {
        lo: BytePos(
            288,
        ),
        hi: BytePos(
            299,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/es6/destructuring/iterableArrayPattern5.ts:18:14
   |
18 | [a, b] = new FooIterator;
   |              ^^^^^^^^^^^

